# ExpaRNA

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  acinclude.m4  autotools-init.sh  configure  configure.ac
.github/workflows/: c-cpp.yml
Examples/: 16SrRNA_Ecoli_Ddiscoid.fa  FASTA-input.job-2623868.fa  P_RNA_Ecoli_Bsubt.fa  RNAforester_16SrRNAs.align  RNAforester_HCV_IRES_RNAs.align  SRP_euk_arch.apsi-85.sci-109.no-1.raw.fa  jiang_16SrRNAs.align  jiang_HCV_IRES_RNAs.align
src/: EPMFinding.cpp  EPMFinding.h  ExpaRNA.cpp  ExpaRNAEnsemble.cpp  ExpaRNAEnsemble.h  ExpaRNAOptions.cpp  ExpaRNAOptions.h  ExpaRNAOutput.cpp  ExpaRNAOutput.h  ExpaRNAdata.cpp  ExpaRNAdata.h  ExpaRNAinput.cpp  ExpaRNAinput.h  LCSEPM.cpp  LCSEPM.h  Makefile.am  Makefile.in  Util_String.cpp  Util_String.h
