# this is example-file: src/Makefile.am

# the program to build
bin_PROGRAMS = ExpaRNA
EXTRA_DIST = ExpaRNAdata.h ExpaRNAEnsemble.h ExpaRNAOutput.h ExpaRNAinput.h LCSEPM.h EPMFinding.h ExpaRNAOptions.h Util_String.h

# prog's sources
ExpaRNA_SOURCES = ExpaRNA.cpp \
	ExpaRNAdata.cpp \
 	ExpaRNAEnsemble.cpp \
 	ExpaRNAOutput.cpp \
 	ExpaRNAinput.cpp  \
	LCSEPM.cpp \
	EPMFinding.cpp \
	ExpaRNAOptions.cpp \
	Util_String.cpp
